src/objects/Care_plan_step__c.object
<CustomObject>
    <fields>
        <fullName>Care_Plan_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Objective</label>
        <referenceTo>Care_Plan_Objective__c</referenceTo>
        <relationshipLabel>Care plan steps</relationshipLabel>
        <relationshipName>Care_plan_steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care_plan_objective_name__c</fullName>
        <label>Care plan objective name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_name__c</fullName>
        <label>Client name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date Step Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_expected_completion__c</fullName>
        <label>Date of expected completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_step_completed__c</fullName>
        <label>Date step completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_if_unsuccessful__c</fullName>
        <label>Detail if unsuccessful</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_of_What_Needs_Template__c</fullName>
        <description>This is the ID of the step template referenced by &quot;What step needs to happen first&quot;</description>
        <label>ID of What Needs Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_of_template__c</fullName>
        <description>This is the ID of the template used to create this step</description>
        <label>ID of template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_external_which_agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If external, which agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Care plan steps</relationshipLabel>
        <relationshipName>Care_plan_steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_successful_or_in_progress__c</fullName>
        <inlineHelpText>If successful or in progress (with challenges)</inlineHelpText>
        <label>If successful or in progress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_for_Action__c</fullName>
        <label>Person Responsible for Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Reference to the object (attendance or event) that this step refers to - set by trigger</description>
        <label>Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Organisation__c</fullName>
        <label>Related Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <label>Status Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Step_records_attendance__c</controllingField>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled with notice and reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>=================</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_records_attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step records attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_step_needs_to_happen_first__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What care plan step needs to happen first?</inlineHelpText>
        <label>What step needs to happen first</label>
        <referenceTo>Care_plan_step__c</referenceTo>
        <relationshipLabel>Care plan steps</relationshipLabel>
        <relationshipName>Care_plan_steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Care plan step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Care_Plan_Objective__c</columns>
        <columns>Client_name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPS-{00000}</displayFormat>
        <label>Care plan step name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care plan steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>